--- a/demo_chapitre_2/ML-de-Bout-en-Bout.ipynb
+++ b/demo_chapitre_2/ML-de-Bout-en-Bout.ipynb
@@ -19,23 +19,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-06T19:23:10.849296Z",
+     "start_time": "2025-02-06T19:23:01.430304Z"
+    }
+   },
    "source": [
     "#Chargement des données: housing.csv\n",
     "import pandas as pd # importation du module pandas\n",
     "import numpy as np\n",
     "habitation = pd.read_csv(\"housing.csv\") \n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-06T19:23:12.839524Z",
+     "start_time": "2025-02-06T19:23:12.747634Z"
+    }
+   },
+   "source": [
+    "habitation.head()"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -122.23     37.88                41.0        880.0           129.0   \n",
+       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
+       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
+       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
+       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value ocean_proximity  \n",
+       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
+       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
+       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
+       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
+       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -136,31 +163,14 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
-       "0    -122.23     37.88                41.0        880.0           129.0   \n",
-       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
-       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
-       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
-       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
-       "\n",
-       "   population  households  median_income  median_house_value ocean_proximity  \n",
-       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
-       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
-       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
-       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
-       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "habitation.head()"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
