--- a/devoir_1/devoir_1_mael_garnier.ipynb
+++ b/devoir_1/devoir_1_mael_garnier.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:30.804514Z",
-     "start_time": "2025-02-10T19:00:30.788422Z"
+     "end_time": "2025-03-01T17:13:11.504725Z",
+     "start_time": "2025-03-01T17:13:11.076711Z"
     }
    },
    "cell_type": "code",
@@ -26,7 +26,7 @@
    ],
    "id": "76d6d2799d2bf514",
    "outputs": [],
-   "execution_count": 328
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:30.850832Z",
-     "start_time": "2025-02-10T19:00:30.812092Z"
+     "end_time": "2025-03-01T17:13:11.535872Z",
+     "start_time": "2025-03-01T17:13:11.515924Z"
     }
    },
    "cell_type": "code",
@@ -172,12 +172,12 @@
        "</div>"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 329
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -203,8 +203,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:30.975459Z",
-     "start_time": "2025-02-10T19:00:30.962376Z"
+     "end_time": "2025-03-01T17:13:11.909749Z",
+     "start_time": "2025-03-01T17:13:11.895856Z"
     }
    },
    "cell_type": "code",
@@ -233,7 +233,7 @@
      ]
     }
    ],
-   "execution_count": 330
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -252,8 +252,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:31.037089Z",
-     "start_time": "2025-02-10T19:00:31.023381Z"
+     "end_time": "2025-03-01T17:13:12.003560Z",
+     "start_time": "2025-03-01T17:13:11.987058Z"
     }
    },
    "cell_type": "code",
@@ -278,12 +278,12 @@
        "Name: count, Length: 62, dtype: int64"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 331
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -294,8 +294,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:31.160799Z",
-     "start_time": "2025-02-10T19:00:31.132586Z"
+     "end_time": "2025-03-01T17:13:12.097594Z",
+     "start_time": "2025-03-01T17:13:12.084348Z"
     }
    },
    "cell_type": "code",
@@ -393,12 +393,12 @@
        "</div>"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 332
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -421,8 +421,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:31.674548Z",
-     "start_time": "2025-02-10T19:00:31.257057Z"
+     "end_time": "2025-03-01T17:13:12.901004Z",
+     "start_time": "2025-03-01T17:13:12.193292Z"
     }
    },
    "cell_type": "code",
@@ -443,7 +443,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 333
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -460,8 +460,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:31.736941Z",
-     "start_time": "2025-02-10T19:00:31.724809Z"
+     "end_time": "2025-03-01T17:13:12.964202Z",
+     "start_time": "2025-03-01T17:13:12.950008Z"
     }
    },
    "cell_type": "code",
@@ -495,7 +495,7 @@
      ]
     }
    ],
-   "execution_count": 334
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -510,15 +510,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:31.768080Z",
-     "start_time": "2025-02-10T19:00:31.749077Z"
+     "end_time": "2025-03-01T17:13:13.010687Z",
+     "start_time": "2025-03-01T17:13:13.003159Z"
     }
    },
    "cell_type": "code",
    "source": "train_set_copy = train_set.copy()",
    "id": "3b9356904a1e8c20",
    "outputs": [],
-   "execution_count": 335
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -529,8 +529,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:31.970850Z",
-     "start_time": "2025-02-10T19:00:31.833246Z"
+     "end_time": "2025-03-01T17:13:13.198497Z",
+     "start_time": "2025-03-01T17:13:13.060212Z"
     }
    },
    "cell_type": "code",
@@ -567,7 +567,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 336
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -590,8 +590,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:32.049323Z",
-     "start_time": "2025-02-10T19:00:32.035274Z"
+     "end_time": "2025-03-01T17:13:13.245251Z",
+     "start_time": "2025-03-01T17:13:13.232107Z"
     }
    },
    "cell_type": "code",
@@ -620,7 +620,7 @@
      ]
     }
    ],
-   "execution_count": 337
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -642,8 +642,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:32.143613Z",
-     "start_time": "2025-02-10T19:00:32.114267Z"
+     "end_time": "2025-03-01T17:13:13.308427Z",
+     "start_time": "2025-03-01T17:13:13.279650Z"
     }
    },
    "cell_type": "code",
@@ -654,23 +654,8 @@
     "# 3. On remplace les valeurs manquantes par la médiane de ces colonnes avec SimpleImputer\n",
     "def replace_missing_values_function(X, cols_to_numeric, cols_to_exclude):\n",
     "\n",
-    "    # ETAPE 1\n",
-    "    # Fonction pour tester si une valeur est numeric. Si elle ne l'est pas, on la remplace par NaN\n",
-    "    def test_numeric(value):\n",
-    "        try:\n",
-    "            float(value)  # Essayer de convertir en float\n",
-    "            return value\n",
-    "        except ValueError:\n",
-    "            return np.nan\n",
-    "\n",
-    "    ## Remplacer les valeurs manquantes pas NaN à l'aide de la fonction precedente.\n",
     "    for col in cols_to_numeric:\n",
-    "        X[col] = X[col].apply(test_numeric)\n",
-    "\n",
-    "    # ETAPE 2\n",
-    "    # Convertir les colonnes en types numériques maintenant qu'on est sur que toutes les valeurs des colonnes peuvent être converties.\n",
-    "    for col in cols_to_numeric:\n",
-    "        X[col] = pd.to_numeric(X[col])\n",
+    "        X[col] = pd.to_numeric(X[col], errors='coerce')\n",
     "\n",
     "    # ETAPE 3\n",
     "    # Instanciation de la classe SimpleImputer\n",
@@ -722,7 +707,7 @@
      ]
     }
    ],
-   "execution_count": 338
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -738,8 +723,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:32.220033Z",
-     "start_time": "2025-02-10T19:00:32.206671Z"
+     "end_time": "2025-03-01T17:13:13.355570Z",
+     "start_time": "2025-03-01T17:13:13.341273Z"
     }
    },
    "cell_type": "code",
@@ -755,7 +740,7 @@
    ],
    "id": "b85a50a49fc32288",
    "outputs": [],
-   "execution_count": 339
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -772,8 +757,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:32.435139Z",
-     "start_time": "2025-02-10T19:00:32.284877Z"
+     "end_time": "2025-03-01T17:13:13.543208Z",
+     "start_time": "2025-03-01T17:13:13.388651Z"
     }
    },
    "cell_type": "code",
@@ -786,7 +771,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -801,7 +786,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 340
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -822,8 +807,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:32.652174Z",
-     "start_time": "2025-02-10T19:00:32.500608Z"
+     "end_time": "2025-03-01T17:13:13.713548Z",
+     "start_time": "2025-03-01T17:13:13.576662Z"
     }
    },
    "cell_type": "code",
@@ -839,7 +824,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -854,7 +839,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 341
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -869,8 +854,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:32.869346Z",
-     "start_time": "2025-02-10T19:00:32.717003Z"
+     "end_time": "2025-03-01T17:13:13.901415Z",
+     "start_time": "2025-03-01T17:13:13.746893Z"
     }
    },
    "cell_type": "code",
@@ -922,7 +907,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -937,7 +922,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 342
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -952,8 +937,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:32.947577Z",
-     "start_time": "2025-02-10T19:00:32.935713Z"
+     "end_time": "2025-03-01T17:13:13.947750Z",
+     "start_time": "2025-03-01T17:13:13.934087Z"
     }
    },
    "cell_type": "code",
@@ -968,7 +953,7 @@
    ],
    "id": "773b99b7d2025582",
    "outputs": [],
-   "execution_count": 343
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -983,8 +968,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:33.025740Z",
-     "start_time": "2025-02-10T19:00:33.012645Z"
+     "end_time": "2025-03-01T17:13:13.995415Z",
+     "start_time": "2025-03-01T17:13:13.981641Z"
     }
    },
    "cell_type": "code",
@@ -1007,7 +992,7 @@
      ]
     }
    ],
-   "execution_count": 344
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -1018,8 +1003,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:33.103970Z",
-     "start_time": "2025-02-10T19:00:33.090332Z"
+     "end_time": "2025-03-01T17:13:14.043173Z",
+     "start_time": "2025-03-01T17:13:14.031677Z"
     }
    },
    "cell_type": "code",
@@ -1042,7 +1027,7 @@
      ]
     }
    ],
-   "execution_count": 345
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -1065,8 +1050,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:33.196880Z",
-     "start_time": "2025-02-10T19:00:33.169155Z"
+     "end_time": "2025-03-01T17:19:46.685986Z",
+     "start_time": "2025-03-01T17:19:46.648322Z"
     }
    },
    "cell_type": "code",
@@ -1110,12 +1095,19 @@
        "3   7.00              28.0         4.0     74.0    Fem  False    philippines   \n",
        "4   6.25              22.0         4.0    261.0    Fem   True        germany   \n",
        "\n",
-       "    age   population  GDP_inhab  \n",
-       "0  46.0   35295770.0    42317.0  \n",
-       "1  43.0  317638000.0    51704.0  \n",
-       "2  47.0   65844000.0    35295.0  \n",
-       "3  49.0   99216300.0     4380.0  \n",
-       "4  35.0   80619000.0    38666.0  "
+       "    age  population_x  GDP_inhab_x  population_y  GDP_inhab_y   population  \\\n",
+       "0  46.0    35295770.0      42317.0    35295770.0      42317.0   35295770.0   \n",
+       "1  43.0   317638000.0      51704.0   317638000.0      51704.0  317638000.0   \n",
+       "2  47.0    65844000.0      35295.0    65844000.0      35295.0   65844000.0   \n",
+       "3  49.0    99216300.0       4380.0    99216300.0       4380.0   99216300.0   \n",
+       "4  35.0    80619000.0      38666.0    80619000.0      38666.0   80619000.0   \n",
+       "\n",
+       "   GDP_inhab  \n",
+       "0    42317.0  \n",
+       "1    51704.0  \n",
+       "2    35295.0  \n",
+       "3     4380.0  \n",
+       "4    38666.0  "
       ],
       "text/html": [
        "<div>\n",
@@ -1144,6 +1136,10 @@
        "      <th>ReBuy</th>\n",
        "      <th>country</th>\n",
        "      <th>age</th>\n",
+       "      <th>population_x</th>\n",
+       "      <th>GDP_inhab_x</th>\n",
+       "      <th>population_y</th>\n",
+       "      <th>GDP_inhab_y</th>\n",
        "      <th>population</th>\n",
        "      <th>GDP_inhab</th>\n",
        "    </tr>\n",
@@ -1161,6 +1157,10 @@
        "      <td>46.0</td>\n",
        "      <td>35295770.0</td>\n",
        "      <td>42317.0</td>\n",
+       "      <td>35295770.0</td>\n",
+       "      <td>42317.0</td>\n",
+       "      <td>35295770.0</td>\n",
+       "      <td>42317.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1172,6 +1172,10 @@
        "      <td>False</td>\n",
        "      <td>united states</td>\n",
        "      <td>43.0</td>\n",
+       "      <td>317638000.0</td>\n",
+       "      <td>51704.0</td>\n",
+       "      <td>317638000.0</td>\n",
+       "      <td>51704.0</td>\n",
        "      <td>317638000.0</td>\n",
        "      <td>51704.0</td>\n",
        "    </tr>\n",
@@ -1187,6 +1191,10 @@
        "      <td>47.0</td>\n",
        "      <td>65844000.0</td>\n",
        "      <td>35295.0</td>\n",
+       "      <td>65844000.0</td>\n",
+       "      <td>35295.0</td>\n",
+       "      <td>65844000.0</td>\n",
+       "      <td>35295.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1198,6 +1206,10 @@
        "      <td>False</td>\n",
        "      <td>philippines</td>\n",
        "      <td>49.0</td>\n",
+       "      <td>99216300.0</td>\n",
+       "      <td>4380.0</td>\n",
+       "      <td>99216300.0</td>\n",
+       "      <td>4380.0</td>\n",
        "      <td>99216300.0</td>\n",
        "      <td>4380.0</td>\n",
        "    </tr>\n",
@@ -1213,18 +1225,22 @@
        "      <td>35.0</td>\n",
        "      <td>80619000.0</td>\n",
        "      <td>38666.0</td>\n",
+       "      <td>80619000.0</td>\n",
+       "      <td>38666.0</td>\n",
+       "      <td>80619000.0</td>\n",
+       "      <td>38666.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 346
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -1239,8 +1255,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:33.321163Z",
-     "start_time": "2025-02-10T19:00:33.306627Z"
+     "end_time": "2025-03-01T17:35:35.391060Z",
+     "start_time": "2025-03-01T17:35:35.378868Z"
     }
    },
    "cell_type": "code",
@@ -1251,12 +1267,11 @@
     "    kw_args={\n",
     "        \"addPIB\": True\n",
     "    },\n",
-    "    feature_names_out=\"one-to-one\"\n",
     ")"
    ],
    "id": "ff2f15a6fa5db3a0",
    "outputs": [],
-   "execution_count": 347
+   "execution_count": 57
   },
   {
    "metadata": {},
@@ -1271,8 +1286,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T19:00:33.415202Z",
-     "start_time": "2025-02-10T19:00:33.370569Z"
+     "end_time": "2025-03-01T17:46:31.215612Z",
+     "start_time": "2025-03-01T17:46:31.160901Z"
     }
    },
    "cell_type": "code",
@@ -1281,7 +1296,7 @@
     "# Création du pipeline\n",
     "data_cleaning = Pipeline([\n",
     "    (\"replace_missing\", replace_missing_values_customer),\n",
-    "    (\"replace_outliers\", replace_outliers_customer)\n",
+    "    (\"replace_outliers\", replace_outliers_customer),\n",
     "])\n",
     "\n",
     "new_columns = list(train_set.columns) + [\"population\", \"GDP_inhab\"]\n",
@@ -1289,17 +1304,17 @@
     "full_pipeline = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"cleaning\", data_cleaning, train_set.columns),\n",
-    "        # La partie d'enrichissement ne fonctionne pas, car elle renomme et rajoute des colonnes dans le DataFrame, produisant une erreur ValueError à l'execution du pipeline.\n",
-    "        # (\"enrichment\", data_enrichment, train_set.columns)\n",
+    "        (\"enrichment\", data_enrichment, train_set.columns)\n",
     "    ],\n",
     "    remainder=\"passthrough\"\n",
     ")\n",
+    "\n",
     "\n",
     "customer_prepare = full_pipeline.fit_transform(train_set)"
    ],
    "id": "da59f0cb9e3ff168",
    "outputs": [],
-   "execution_count": 348
+   "execution_count": 59
   },
   {
    "metadata": {},
