ajout des fichiers manquant

--- a/devoir_2/devoir_2_mael_garnier.ipynb
+++ b/devoir_2/devoir_2_mael_garnier.ipynb
@@ -1188,7 +1188,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 3. Entrainement d'un classeur multiclass\n",
+    "D## 3. Entrainement d'un classeur multiclass\n",
     "\n",
     "### 3.1\n",
     "Nous pouvons maintenant entrainer un modèle multiclass. Pour commencer, nous allons discrétiser les revenus en 3 classes : bas, moyen et élevé. Pour cela, nous allons utiliser PowerTransformer pour transformer la distribution des revenus selon les conditions suivantes :\n",
